--- a/.github/workflows/timestamp.yaml
+++ b/.github/workflows/timestamp.yaml
@@ -9,8 +9,8 @@ jobs:
     steps:
       - name: Get current time
         uses: mcpierce/github-commit-timestamp-tagger@master
-        id: current-timestamp
+        id: create_tag
         with:
           base_version: "v1.0"
       - name: Set new Timestamp
-        run: "echo ${{ steps.current-timestamp.outputs.tag_time }} > last-nest-migration-ts"
+        run: "echo ${{ steps.create_tag.outputs.tag_time }} > last-nest-migration-ts"
