--- a/.github/workflows/timestamp.yaml
+++ b/.github/workflows/timestamp.yaml
@@ -6,11 +6,8 @@ jobs:
   update-timestamp:
     runs-on: ubuntu-latest
     steps:
-    - name: timetag
-      id: create_tag
-      uses: mcpierce/github-commit-timestamp-tagger@master
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        base_version: "v1.0"
+    - name: Timestamp
+      id: create_timestamp
+      run: echo TS=$(date +%s) >> $GITHUB_ENV
     - name: Set new Timestamp
-      run: "echo ${{ steps.create_tag.outputs.tag_time }} > last-nest-migration-ts"
+      run: "echo ${{ env.TS }} > last-nest-migration-ts"
