--- a/.github/workflows/timestamp.yaml
+++ b/.github/workflows/timestamp.yaml
@@ -1,7 +1,7 @@
 name: "last-nest-migration update"
 on:
   schedule:
-  - cron: "0 2 */1 * *"
+  - cron: "0 * * * *"
 jobs:
   update-timestamp:
     runs-on: ubuntu-latest
