--- a/.github/workflows/timestamp.yml
+++ b/.github/workflows/timestamp.yml
@@ -10,4 +10,4 @@ jobs:
       id: create_timestamp
       run: echo TS=$(date +%s) >> $GITHUB_ENV
     - name: Set new Timestamp
-      run: "echo ${{ env.TS }} > last-nest-migration-ts"
+      run: "echo ${{ env.TS }} > last-nest-migration"
